k8s/30-message-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: message-api
  namespace: zerotouch-lab
spec:
  replicas: 2
  selector:
    matchLabels:
      app: message-api
  template:
    metadata:
      labels:
        app: message-api
    spec:
      containers:
        - name: message-api
          image: zerotouch/message-api:dev
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            requests:
              cpu: 50m
              memory: 96Mi
            limits:
              memory: 192Mi
---
apiVersion: v1
kind: Service
metadata:
  name: message-api
  namespace: zerotouch-lab
spec:
  type: NodePort
  selector:
    app: message-api
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30080 # kind maps this to localhost:8080
